--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "@babel/preset-env": "^7.0.0",
     "rollup-plugin-babel": "^4.0.2",
     "rollup-plugin-commonjs": "^9.1.5",
+    "rollup-plugin-istanbul": "^2.0.1",
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-multi-entry": "^2.0.2",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-istanbul": "^2.0.1",
-    "rollup-plugin-terser": "^3.0.0"
+    "rollup-plugin-uglify": "^4.0.0",
+    "uglify-es": "^3.3.9"
   },
   "peerDependencies": {
     "rollup": "*"
