--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "uglify-es": "^3.3.9"
   },
   "peerDependencies": {
-    "rollup": "*"
+    "rollup": "<1.0.0"
   },
   "devDependencies": {
     "conventional-changelog-cli": "^2.0.1",
