--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-transform-object-assign": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.0.0",
     "rollup-plugin-babel": "^4.2.0",
     "rollup-plugin-commonjs": "^10.0.1",
@@ -47,7 +48,8 @@
     "rollup-plugin-terser": "^5.1.1"
   },
   "peerDependencies": {
-    "rollup": "^1.12.0"
+    "rollup": "^1.12.0",
+    "@babel/runtime": "^7.55.0"
   },
   "devDependencies": {
     "@videojs/generator-helpers": "^1.0.0",
