--- a/package.json
+++ b/package.json
@@ -35,26 +35,26 @@
   },
   "homepage": "https://github.com/videojs/videojs-generate-rollup-config",
   "dependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-transform-object-assign": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.0.1",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-transform-object-assign": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-multi-entry": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "rollup-plugin-istanbul": "^2.0.1",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-multi-entry": "^2.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.1.1"
+    "rollup-plugin-terser": "^7.0.2"
   },
   "peerDependencies": {
-    "rollup": "^1.12.0",
-    "@babel/runtime": "^7.9.2"
+    "rollup": "^2.26.11",
+    "@babel/runtime": "^7.11.2"
   },
   "devDependencies": {
-    "@videojs/generator-helpers": "^1.0.0",
+    "@videojs/generator-helpers": "^1.1.0",
     "videojs-generator-verify": "~1.2.0",
-    "videojs-standard": "^8.0.2"
+    "videojs-standard": "^8.0.4"
   },
   "husky": {
     "hooks": {
