--- a/package.json
+++ b/package.json
@@ -35,21 +35,17 @@
   },
   "homepage": "https://github.com/videojs/videojs-generate-rollup-config",
   "dependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-transform-object-assign": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-multi-entry": "^4.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "@videojs/babel-config": "^0.1.1",
     "rollup-plugin-istanbul": "^2.0.1",
     "rollup-plugin-terser": "^7.0.2"
   },
   "peerDependencies": {
-    "rollup": "^2.26.11",
-    "@babel/runtime": "^7.11.2"
+    "rollup": "^2.26.11"
   },
   "devDependencies": {
     "@videojs/generator-helpers": "^1.1.0",
