--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@rollup/plugin-multi-entry": "^4.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@videojs/babel-config": "^0.2.0",
+    "rollup-plugin-external-globals": "^0.6.1",
     "rollup-plugin-istanbul": "^2.0.1",
     "rollup-plugin-terser": "^7.0.2"
   },
